Prevent date wrapping

--- a/UI/css/setup.css
+++ b/UI/css/setup.css
@@ -125,3 +125,7 @@ td.dijitStretch {
     color: white;
     margin-left: 1px;
 }
+
+td.transdate, td.duedate, td.datepaid {
+   white-space: nowrap!important;
+}
